<resources>
    <string name="app_name">Interviewd</string>
    <string name="create_a_question">Create a Question</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="enter_a_description">Enter a Description</string>
    <string name="submit">Submit</string>
    <string name="enter_a_duration_mins">Enter a duration (mins)</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_questions">Questions</string>
    <string name="title_interview_templates">Interview Templates</string>
    <string name="title_candidates">Candidates</string>
    <string name="candidate">Candidate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="cant_find_your_questions">Can\'t find your questions :(</string>
    <string name="placeholder">Placeholder</string>
    <string name="cant_find_your_templates">Can\'t find your templatesRelay :(</string>
    <string name="position_title">Position Title</string>
    <string name="estimated_duration">Estimated duration:</string>
    <string name="estimate">Est.</string>
    <string name="add_question">Add question</string>
    <string name="cant_find_your_candidates">Can\'t find your Candidates :(</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="couldnt_load_interviews">Couldn\'t load interviews</string>
    <string name="load_template">Load Template</string>
    <string name="select_a_template">Select a template</string>
    <string name="sample">Sample</string>
    <string name="est">est. %1$d mins</string>
    <string name="elapsed">%1$d mins elapsed</string>
    <string name="next">next:</string>
    <string name="question_page_number">%1$d/%2$d</string>
    <string name="template_name">Template Name</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
</resources>
