<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.alexdenton.interviewd.CreateQuestionActivity">

    <TextView
        android:id="@+id/createQuestionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_question"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/createQuestionNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/enter_a_name"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/createQuestionTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/createQuestionDescField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/enter_a_description"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@+id/createQuestionNameField"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="-30dp" />

    <Button
        android:id="@+id/createQuestionSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/createQuestionDescField"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>
